# LumiTune

./: .gitignore  AGENTS.md  README.md  example.html  fix_player_edits.js  gege.html  index.html  package-lock.json  package.json  planning.txt  prep-build.js  profile.mjs  referensi.html  script.js  server.js  style.css
js/: main.js  nav.js  youtube.js
js/core/: constants.js  helpers.js  storage.js
js/data/: playlist.js  queue.js
js/lyrics/: lyrics.js
js/player/: player.js
js/ui/: modals.js  search.js  settings.js  shortcuts.js  toast.js  views.js  virtual-list.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  metadata.rs  scanner.rs  worker.rs
src-tauri/src/metadata/: acoustid.rs  deezer.rs  display.rs  fpcalc.rs  merge.rs  mod.rs  musicbrainz.rs  normalize.rs  verifier.rs
themes/: blackwhite.css  brutalism.css  dark.css  default.css  light.css  mecha.css  neurophism.css  retro.css  shibuya.css  soft-pastel.css  synthwave.css  zine.css
