[package]
name = "lumitune"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "protocol-asset", "window-all", "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
raw-window-handle = "0.5"
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }
lofty = "0.24"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
